segundo commit do projeto

--- a/RecomSinqia/Views/Recomendacoes/Delete.cshtml
+++ b/RecomSinqia/Views/Recomendacoes/Delete.cshtml
@@ -11,29 +11,6 @@
     <h4>Recomendacao</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Classificacao.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Classificacao.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Colaborador.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Colaborador.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Dificuldade.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Dificuldade.Nome)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Gerencia.Nome)
@@ -41,6 +18,38 @@
 
         <dd>
             @Html.DisplayFor(model => model.Gerencia.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Cliente.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Cliente.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sistema.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sistema.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Modulo.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Modulo.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Classificacao.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Classificacao.Nome)
         </dd>
 
         <dt>
@@ -52,14 +61,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Observacao)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Observacao)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Prioridade.Nome)
         </dt>
 
@@ -67,6 +68,29 @@
             @Html.DisplayFor(model => model.Prioridade.Nome)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Dificuldade.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Dificuldade.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Colaborador.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Colaborador.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Observacao)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Observacao)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
