--- a/RecomSinqia/Views/Recomendacoes/Details.cshtml
+++ b/RecomSinqia/Views/Recomendacoes/Details.cshtml
@@ -10,32 +10,9 @@
     <h4>Recomendacao</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Classificacao.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Classificacao.Nome)
-        </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Colaborador.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Colaborador.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Dificuldade.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Dificuldade.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Gerencia.Nome)
+            @Html.DisplayNameFor(model => model.Gerencia)
         </dt>
 
         <dd>
@@ -43,11 +20,67 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TipoFalha.Nome)
+            @Html.DisplayNameFor(model => model.Cliente)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Cliente.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sistema)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sistema.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Modulo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Modulo.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Classificacao)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Classificacao.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TipoFalha)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TipoFalha.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Prioridade)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Prioridade.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Dificuldade)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Dificuldade.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Colaborador)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Colaborador.Nome)
         </dd>
 
         <dt>
@@ -56,14 +89,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Observacao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Prioridade.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Prioridade.Nome)
         </dd>
 
     </dl>
