adicionado o csv que vai servir de base para o aprendizado de maquina

--- a/RecomSinqia/Views/Recomendacoes/Delete.cshtml
+++ b/RecomSinqia/Views/Recomendacoes/Delete.cshtml
@@ -13,7 +13,7 @@
     <dl class="dl-horizontal">
 
         <dt>
-            @Html.DisplayNameFor(model => model.Gerencia.Nome)
+            @Html.DisplayNameFor(model => model.Gerencia)
         </dt>
 
         <dd>
@@ -21,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Cliente.Nome)
+            @Html.DisplayNameFor(model => model.Cliente)
         </dt>
 
         <dd>
@@ -29,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Sistema.Nome)
+            @Html.DisplayNameFor(model => model.Sistema)
         </dt>
 
         <dd>
@@ -37,7 +37,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Modulo.Nome)
+            @Html.DisplayNameFor(model => model.Modulo)
         </dt>
 
         <dd>
@@ -45,7 +45,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Classificacao.Nome)
+            @Html.DisplayNameFor(model => model.Classificacao)
         </dt>
 
         <dd>
@@ -53,7 +53,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TipoFalha.Nome)
+            @Html.DisplayNameFor(model => model.TipoFalha)
         </dt>
 
         <dd>
@@ -61,7 +61,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Prioridade.Nome)
+            @Html.DisplayNameFor(model => model.Prioridade)
         </dt>
 
         <dd>
@@ -69,7 +69,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Dificuldade.Nome)
+            @Html.DisplayNameFor(model => model.Dificuldade)
         </dt>
 
         <dd>
@@ -77,7 +77,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Colaborador.Nome)
+            @Html.DisplayNameFor(model => model.Colaborador)
         </dt>
 
         <dd>
